drawer z-index updates fixing app

--- a/src/app/components/shared/quick-filters/quick-filters.component.scss
+++ b/src/app/components/shared/quick-filters/quick-filters.component.scss
@@ -1,5 +1,5 @@
 :host {
-  @apply px-4 py-2.5 border-b border-solid border-secondary w-full flex justify-between -z-10;
+  @apply px-4 py-2.5 border-b border-solid border-secondary w-full flex justify-between;
 }
 
 .input {
