--- a/src/styles.scss
+++ b/src/styles.scss
@@ -68,7 +68,3 @@ div.mat-mdc-autocomplete-panel {
     }
   }
 }
-
-ng-scrollbar {
-  @apply -z-10;
-}
